--- a/Front/car.html
+++ b/Front/car.html
@@ -7,7 +7,7 @@
         
     </head>
     <body>
-        <h1>Front Final G1</h1>
+        <h1>Front Final</h1>
         <h1> Carros </h1>
         <ul>
             <li><a href="index.html">Inicio</a></li>
