--- a/Front/clientes.html
+++ b/Front/clientes.html
@@ -3,9 +3,10 @@
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script type="text/javascript" src="js/funcionesClientes.js"></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Front Final G1</h1>
+        <h1>Frontend</h1>
         <h1> Clientes </h1>
         <ul>
             <li><a href="index.html">Inicio</a></li>
