--- a/Front/gama.html
+++ b/Front/gama.html
@@ -4,6 +4,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script type="text/javascript" src="js/funcionesGama.js"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Gamas</h1>
