--- a/Front/index.html
+++ b/Front/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Front Final G1</h1>
+        <h1>Frontend</h1>
         <h1> Inicio </h1>
         <ul>
             <li><a href="gama.html">Gamas</a></li>
